kubernetes-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-app
  template:
    metadata:
      labels:
        app: project-app
    spec:
      containers:
        - name: container
          image: docker.io/gouda99/my-repo:Build-ce37128-APP
          ports:
            - containerPort: 8080
          resources:   # Resource limits and requests for the container
            limits:
              cpu: "0.5"   # CPU limit
              memory: "512Mi"   # Memory limit
            requests:
              cpu: "0.1"   # CPU request
              memory: "128Mi"   # Memory request   
          volumeMounts:
            - name: pvc
              mountPath: /var/www/html


      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: project-pvc
