kubernetes-manifests/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
spec:
  selector:
    app: project-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
