kubernetes-manifests/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy-app
spec:
  podSelector:
    matchLabels:
      app: project-app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: project-app
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: project-app
